--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# *saved_model/model_2.pickle* was trained on my RTX2080 with, now load it"
+    "# *saved_model/model_2.pickle* was trained on my RTX2080 with *src/train.py*, now load it"
    ]
   },
   {
@@ -218,7 +218,7 @@
     "tags": []
    },
    "source": [
-    "# Some Miss Classify Example"
+    "# Some Miss Classified Example"
    ]
   },
   {
@@ -440,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trim as resize so that their dimension comform with our model, expect `[batch, channel, 64, 64]`"
+    "# Trim and resize so that their dimension comform with our model, expect `[batch, channel, 64, 64]`"
    ]
   },
   {
