--- a/demo.ipynb
+++ b/demo.ipynb
@@ -56,6 +56,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " | label            | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 | 13 | 14 |\n",
+    "|:-----------------:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|\n",
+    "| Chinese Character | 零 | 一| 二 | 三 | 四 | 五 | 六 | 七 | 八 | 九 | 十 | 百 | 千 | 万 | 亿 |\n",
+    "| numeral           | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 100 | 1000 | 10000 | 10-e8 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load images whose paths and labels were specified in *data/processed.csv'. *IntImage*, the customized dataloader were implemented in *utils.py*"
    ]
   },
