--- a/demo.ipynb
+++ b/demo.ipynb
@@ -66,6 +66,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The goal is to convert the hand writen chinese number to numeral  \n",
+    "Example: 一百七十万 -> 1700000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load images whose paths and labels were specified in *data/processed.csv'. *IntImage*, the customized dataloader were implemented in *utils.py*"
    ]
   },
